fix imprint width on mobile

--- a/src/styles/Imprint.sass
+++ b/src/styles/Imprint.sass
@@ -39,6 +39,13 @@
 	}
 }
 
+@media screen and (max-width: 480px) {
+	.imprint__content {
+		padding: 0 20px 10px;
+		font-size: .75em;
+	}
+}
+
 .imprint__content__headline {
 	color: white;
 	text-transform: uppercase;
